syntax = "proto3";

import "google/protobuf/timestamp.proto";

package bookstore;

// Book 정보를 담는 메시지
message Book {
  int64 id = 1;
  string title = 2;
  string publisher = 3;
  google.protobuf.Timestamp published_date = 4;
}

// Author 정보를 담는 메시지
message Author {
  int64 id = 1;
  string name = 2;
}

// 리뷰 정보를 담는 메시지
message Review {
  int64 id = 1;
  int64 book_id = 2;
  string content = 3;
  float rating = 4;
  google.protobuf.Timestamp created_date = 5;
}

// 책서비스
service BookService {
  rpc AddBook(AddBookRequest) returns (Book) {}
  rpc GetBookDetails(GetBookDetailsRequest) returns (Book) {}
  rpc ListBooks(ListBooksRequest) returns (stream Book) {}
  rpc SearchBooksByAuthor(SearchBooksByAuthorRequest) returns (stream Book) {}
}

// 리뷰 서비스
service ReviewService {
  rpc GetReviews(GetReviewsRequest) returns (stream Review) {}
}

// 리뷰 조회 요청 메시지
message GetReviewsRequest {
  int64 book_id = 1;
}

// 책 추가 요청 메시지
message AddBookRequest {
  string title = 1;
  string publisher = 2;
  google.protobuf.Timestamp published_date = 3;
}

// 특정 책 조회 요청 메시지
message GetBookDetailsRequest {
  int64 book_id = 1;
}

// 특정 저자의 책 검색 요청 메시지
message SearchBooksByAuthorRequest {
  string author_name = 1;
}

// 책 목록 조회 요청 메시지
message ListBooksRequest {}


